<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>sparrow-bom</artifactId>
        <groupId>com.sparrowzoo</groupId>
        <version>1.0.3-RELEASE</version>
        <relativePath/>

    </parent>
    <modelVersion>4.0.0</modelVersion>
    <version>1.0.3-RELEASE</version>

    <artifactId>sparrow-protocol-mq</artifactId>

    <dependencies>
        <dependency>
            <groupId>com.sparrowzoo</groupId>
            <artifactId>sparrow-protocol-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <configuration>
                    <configLocation>../style/sparrow_checkstyle.xml</configLocation>
                    <suppressionsLocation>../style/check_style_suppressions.xml</suppressionsLocation>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
